--- a/manifest.json
+++ b/manifest.json
@@ -1,17 +1,14 @@
 {
 	"manifest_version": 2,
-	"name": "Power List",
-	"description": "Simple but powerful to-do list",
+	"name": "Flow",
+	"description": "Productivity for the rest of us",
 	"version": "1.1",
 	"icons": {
 		"128": "img/icon-128.png"
 	},
 	"app": {
-		"urls": [
-			"http://certification.googleapps.com/app-info/"
-		],
 		"launch": {
-			"web_url": "http://certification.googleapps.com/"
+			"local_path": "index.html"
 		}
 	},
 	"permissions": [
