--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,8 @@
     "handlebars": "~1.3.0",
     "marionette": "~2.2.1",
     "handlebars-helpers": "~2.0.0",
-    "autosize": "~3.0.10"
+    "autosize": "~3.0.10",
+    "jquery-ui": "~1.11.4"
   },
   "resolutions": {
     "underscore": "~1.8"
