--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "Jeff Jassky <jeff@jeffjassky.com>"
   ],
   "version": "0.5.0",
-  "dependencies": {},
+  "dependencies": {
+    "body-parser": "^1.14.1",
+    "express": "^4.13.3"
+  },
   "devDependencies": {
     "bower": "^1.3.12",
     "chai": "^1.9.1",
